# c_openai

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  CODE_REVIEW_REPORT.md  LICENSE  PORTING_GUIDE_zh.md  README.md  README_zh.md  build.py  build.sh  build_lwip.sh
cJSON/: CMakeLists.txt
example/: CMakeLists.txt  anthropic_example.c  chat_example.c
include/: openai.h  openai_config.h  openai_error.h  openai_http.h  openai_json.h  openai_types.h
src/: CMakeLists.txt  openai_client.c  openai_error.c  openai_http_curl.c  openai_http_lwip.c  openai_json.c
